--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -102,3 +102,13 @@ footer.footer
 .blog-list-item .featured-thumbnail
   flex-basis: 35%
   margin: 0 1.5em 0 0
+
+.photo-grid 
+    display: grid
+    grid-template-columns: repeat(auto-fill, MinMax(300px, 1fr))
+    gap: 16px
+
+
+.photo-item p 
+    text-align: center
+    padding: 8px 0
