--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -106,11 +106,12 @@ footer.footer
 .photo-grid 
     display: grid
     grid-template-columns: repeat(auto-fill, MinMax(300px, 1fr))
-    gap: 16px
+    gap: 1px
+    padding : 1em 1em 1em 1em
 
 
 .photo-item p 
     text-align: center
-    padding: 8px 0
+    padding: 1px 0
 
 
