--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -1,8 +1,10 @@
 @import ./variables.sass
 
-
+#navLogo
+ background-color: $bg-color
 .navbar .navbar-menu
   box-shadow: none !important
+  background-color: $bg-color
 
 .content .taglist
   list-style: none
@@ -52,10 +54,10 @@
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #EB4B4C
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px #EB4B4C
+    box-shadow: inset 0 0 0 2px #EB4B4C
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -106,7 +108,7 @@ footer.footer
 
 .photo-grid 
     display: grid
-    grid-gap: 0.1em
+    gap: 0.3em
     grid-template-columns: repeat(auto-fill, MinMax(200px, 1fr))
     padding : 1em
 
@@ -147,3 +149,6 @@ footer.footer
   visibility: hidden
   opacity: 0
   transition: visibility 0s, opacity 0.3s linear
+
+body
+  background-color: $bg-color
