--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -96,6 +96,36 @@ footer.footer
     vertical-align: middle
     display: inline
 
+//About    
+.image
+  display: flex
+  justify-content: center
+  align-items: center
+  img
+    width: 100%
+    max-width: 300px // or whatever your maximum size for the image is
+    height: auto
+    margin: 0 auto
+ 
+  
+
+
+.sectionAbout
+  display: grid
+  grid-template-rows: 0.1fr 2fr 0.2fr
+  
+
+@media (max-width: 768px) // Adjust the breakpoint to your needs
+  .image
+    img
+      max-width: 100%  
+
+  .sectionAbout
+    flex-direction: column
+    align-items: center
+    justify-content: center      
+
+
 // blog roll
 .blog-list-item.is-featured
   background-color: #d6400033
@@ -106,11 +136,23 @@ footer.footer
   flex-basis: 35%
   margin: 0 1.5em 0 0
 
+.blog-list-item
+  display: flex
+  flex-direction: column
+  height: 100% // Make the items take full height
+  margin-bottom: 1em
+  header
+    min-height: 4em
+
+  .post-meta
+    flex-grow: 1 // This will push everything else to the bottom
+
 .photo-grid 
     display: grid
-    gap: 0.3em
-    grid-template-columns: repeat(auto-fill, MinMax(200px, 1fr))
-    padding : 1em
+    gap: 7px
+    grid-template-columns: repeat(auto-fill, MinMax(180px, 1fr))
+    justify-content: center
+    padding:1em
 
  
 .photo-item
@@ -121,6 +163,8 @@ footer.footer
     height: auto
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out
     display: block
+    margin-left: auto // These two lines ensure
+    margin-right: auto
 
   &:hover
     img
@@ -135,7 +179,16 @@ footer.footer
     opacity: 0.5 !important
     background-color: rgba(0, 0, 0, 0.6)
 
+@media (max-width: 768px)
+  .photo-grid
+    grid-template-columns: repeat(auto-fill, MinMax(180px, 1fr))// Adjust column size for mobile
+    justify-items: center // This will center the items inside the grid on smaller screens
 
+    .photo-item
+      img
+        max-width: 100% // Ensure the image is not larger than the container
+        height: auto
+    
 
 .photo-caption
   position: absolute
