--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -30,7 +30,7 @@
 
   &:hover
     color: #fff !important 
-    background-color: #EB4B4C
+    background-color: #84cdee
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3) // Optional: adds a subtle shadow around the box
 
 
@@ -76,7 +76,7 @@
     align-items: center
 
 // Define color variables
-$btn-color: #EB4B4C
+$btn-color: #84cdee
 
 
 // Keyframes for pulse animation
@@ -185,7 +185,7 @@ footer.footer
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033
+  background-color: #84cdee
 .blog-list-item header
   display: flex
   margin-bottom: 1em
