--- a/src/style/variables.sass
+++ b/src/style/variables.sass
@@ -6,11 +6,11 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #EB4B4C
+$kaldi-red: #fff
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523 //footer background color
-$bg-color:  #f6eedd
+$bg-color:  #b9e2f5
