--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -1,41 +1,43 @@
 @import ./variables.sass
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bebas+Neue&display=swap')
+.custom-Navbar
+ background-color:$bg-color !important
 
-#navLogo
- background-color: $bg-color
 
-.navbar .navbar-menu
-  box-shadow: none !important
-  background-color: $bg-color
+.navbar-title 
+  padding: none !important
+  font-size: 3rem
+  font-weight: bold
+  font-family:'Bebas Neue', sans-serif
+  color:#fff
+  @media (max-width: 991.98px) 
+    font-size: 1.5rem
+  @media (max-width: 767.98px) 
+    font-size: 1.2rem
 
-.navbar-item
-  position: relative
-  display: inline-block
-  padding: 18px 15px // Adjust as needed
-  transition: all 0.3s ease
-  overflow: hidden // Hide the moving parts until hover
-
-  &:before
-    content: ''
-    position: absolute
-    top: -100%
-    left: 0
-    width: 100%
-    height: 100%
-    background-color: #EB4B4C // Your choice of color
-    transition: all 0.3s ease
-    z-index: -1
-
-  &:hover:before
-    top: 0
+.offcanvas-body 
+  background-color: $bg-color 
+.navbar-toggler-icon 
+ font-size:0.8em
+ 
+.hamburger
+ background-color: $bg-color 
+.custom-nav-link 
+  font-size: 1.5rem
+  color:#000
+  
 
   &:hover
-    color: #fff !important 
-    background-color: #84cdee
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3) // Optional: adds a subtle shadow around the box
+   color:#fff
+   background-color:#84cdee
+   box-shadow: 0 0 10px  rgba(0, 0, 0, 0.3)
 
-
-
-
+.dropdown-menu 
+  border: none
+  background-color: transparent  
+  font-size: 1rem
+  color:#000
 
 .content .taglist
   list-style: none
@@ -88,6 +90,7 @@ $btn-color: #84cdee
 
 // Button styling
 .btn
+  padding: 2em
   display: inline-block
   padding: 12px 16px 10px
   font-size: 18px
@@ -121,15 +124,7 @@ $btn-color: #84cdee
 .margin-top-0
   margin-top: 0 !important
 
-.navbar-item .icon
-  color: $primary
-// Override for use of svg's from https://simpleicons.org/
-.icon svg
-  width: 1.5rem
-  height: 1.5rem
-  fill: currentColor
-.navbar-brand .navbar-item.logo
-  padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
@@ -281,3 +276,13 @@ body, html
 
   animation: blink-caret .75s step-end infinite
 
+
+.has-text-weight-semibold
+  font-family:"Barlow Condensed", sans-serif
+
+#about 
+  font-family:"Barlow Condensed", sans-serif
+#blog-title
+  font-family:"Barlow Condensed", sans-serif  
+#contact-title
+ font-family:"Barlow Condensed", sans-serif 
