styled blog image

--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -231,6 +231,9 @@ footer.footer
     align-items: center
     justify-content: center      
 
+//index
+
+
 
 // blog roll
 .blog-list-item.is-featured
@@ -252,6 +255,15 @@ footer.footer
 
   .post-meta
     flex-grow: 1 // This will push everything else to the bottom
+
+.blog-image
+  width: auto
+  height: auto
+  max-height: 500px
+  object-fit: contain 
+  display: block 
+  padding-bottom: 30px
+  margin: 0 auto
 
 .photo-grid 
     display: grid
